--- a/sign-up.html
+++ b/sign-up.html
@@ -37,13 +37,15 @@
   </head>
 
   <body>
-    <!-- Header -->
-    <header id="header" class="header"></header>
-    <script>
-      load("#header", "./assets/template/header.html");
-    </script>
-    <!-- Main -->
     <div class="container">
+      <!-- Header -->
+      <header id="header"></header>
+      <script>
+        load("#header", "./assets/template/header.html");
+      </script>
+
+      <!-- Main -->
+
       <!-- Footer -->
       <footer id="footer"></footer>
       <script>
