--- a/index.html
+++ b/index.html
@@ -1,60 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Grocery Mart</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grocery Mart</title>
 
-        <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
-        <link rel="manifest" href="./assets/favicon/site.webmanifest" />
-        <meta name="msapplication-TileColor" content="#da532c" />
-        <meta name="theme-color" content="#ffffff" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
-        <!-- Fonts -->
-        <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+    <!-- Fonts -->
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
 
-        <!-- Styles -->
-        <link rel="stylesheet" href="./assets/css/main.css" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="./assets/css/main.css" />
 
-        <!-- Scripts -->
-        <script src="./assets/js/scripts.js"></script>
-    </head>
-    <body>
-        <!-- Header -->
-        <header id="header" class="header"></header>
-        <script>
-            load("#header", "./templates/header.html");
-        </script>
+    <!-- Scripts -->
+    <script src="./assets/js/scripts.js"></script>
+  </head>
+  <body>
+    <!-- Header -->
+    <header id="header" class="header"></header>
+    <script>
+      load("#header", "./templates/header.html");
+    </script>
 
-        <div class="container">
-            <!-- Slideshow -->
-            <div class="slideshow">
-                <div class="slideshow__inner">
-                    <div class="slideshow__item">
-                        <a href="#!" class="slideshow__link">
-                            <picture>
-                                <source media="(max-width: 767.98px)" srcset="./assets/img/slideshow/item-1-md.png" />
-                                <img src="./assets/img/slideshow/item-1.png" alt="" class="slideshow__img" />
-                            </picture>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="slideshow__page">
-                    <span class="slideshow__num">1</span>
-                    <span class="slideshow__slider"></span>
-                    <span class="slideshow__num">5</span>
-                </div>
+    <div class="container home">
+      <section class="home__container">
+        <!-- Slideshow -->
+        <div class="slideshow">
+          <div class="slideshow__inner">
+            <div class="slideshow__item">
+              <a href="#!" class="slideshow__link">
+                <picture>
+                  <source media="(max-width: 767.98px)" srcset="./assets/img/slideshow/item-1-md.png" />
+                  <img src="./assets/img/slideshow/item-1.png" alt="" class="slideshow__img" />
+                </picture>
+              </a>
             </div>
+          </div>
 
-            <!-- Footer -->
-            <footer id="footer"></footer>
-            <script>
-                load("#footer", "./templates/footer.html");
-            </script>
+          <div class="slideshow__page">
+            <span class="slideshow__num">1</span>
+            <span class="slideshow__slider"></span>
+            <span class="slideshow__num">5</span>
+          </div>
         </div>
-    </body>
+      </section>
+
+      <!-- Browse Categories -->
+      <section class="home__container">
+        <h2 class="home__heading">Browse Categories</h2>
+        <div class="home__cate row row-cols-3 row-cols-md-1">
+          <div class="col">
+            <article class="cate-item">
+              <img src="./assets/img/category-item/item-1.png" alt="" class="cate-item__thumb" />
+              <section class="cate-item__info">
+                <h3 class="cate-item__title">$24 - $150</h3>
+                <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+              </section>
+            </article>
+          </div>
+
+          <div class="col">
+            <article class="cate-item">
+              <img src="./assets/img/category-item/item-2.png" alt="" class="cate-item__thumb" />
+              <section class="cate-item__info">
+                <h3 class="cate-item__title">$37 - $160</h3>
+                <p class="cate-item__desc">Espresso arabica and robusta beans</p>
+              </section>
+            </article>
+          </div>
+
+          <div class="col">
+            <article class="cate-item">
+              <img src="./assets/img/category-item/item-3.png" alt="" class="cate-item__thumb" />
+              <section class="cate-item__info">
+                <h3 class="cate-item__title">$32 - $160</h3>
+                <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
+              </section>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Browse Product -->
+      <section class="home__container">
+        <div class="home__row">
+          <h2 class="home__heading">Total LavAzza 1320</h2>
+          <button class="filter-button">
+            Filter
+            <img src="./assets/icons/filter.svg" alt="" class="filter-button__icon" />
+          </button>
+        </div>
+        <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1">
+          <!-- Product Card 1 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="!#">
+                  <img src="./assets/img/product/item-1.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Coffee Beans - Espresso Arabica and Robusta Beans</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$47.00</span>
+                <img src="" alt="" class="product-card__star" />
+                <span class="product-card__score">4.3</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product Card 2 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="!#">
+                  <img src="./assets/img/product/item-2.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Lavazza Coffee Blends - Try the Italian Espresso</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$53.00</span>
+                <img src="" alt="" class="product-card__star" />
+                <span class="product-card__score">3.4</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product Card 3 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="!#">
+                  <img src="./assets/img/product/item-3.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Lavazza - Caffè Espresso Black Tin - Ground coffee</h3>
+              <p class="product-card__brand">welikecoffee</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$99.99</span>
+                <img src="" alt="" class="product-card__star" />
+                <span class="product-card__score">5.0</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product Card 4 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="!#">
+                  <img src="./assets/img/product/item-4.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon" />
+                </button>
+              </div>
+              <h3 class="product-card__title">Qualità Oro Mountain Grown - Espresso Coffee Beans</h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$38.65</span>
+                <img src="" alt="" class="product-card__star" />
+                <span class="product-card__score">4.4</span>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <!-- Footer -->
+      <footer id="footer"></footer>
+      <script>
+        load("#footer", "./templates/footer.html");
+      </script>
+    </div>
+  </body>
 </html>
